--- a/bitcoin/bitcoin.service.template
+++ b/bitcoin/bitcoin.service.template
@@ -1,6 +1,6 @@
-# /etc/systemd/system/tor.service
+# /etc/systemd/system/bitcoin.service
 [Unit]
-Description=Tor relay/bridge
+Description=Bitcoin node
 After=docker.service
 Requires=docker.service
 
@@ -9,13 +9,15 @@ PermissionsStartOnly=true
 Restart=on-failure
 ExecStart=/bin/sh -c ' \
  docker run --name=%p_$(uuidgen) --rm \
- -e NAME="${NAME}" \
- -e CONTACT="${CONTACT}" \
- -e TOR_CONFIG_TEMPLATE="${ROLE}" \
- -p 80:80 \
- -p 443:443 \
- -p 4235:4235 \
- docker.io/angelx/tor:${TOR_VER}'
+ -p 8332:8332 \
+ -p 8333:8333 \
+ -p 18332:18332 \
+ -p 18333:18333 \
+ -v /data:/data:rw \
+ ${IMG} \
+ -conf=/bitcoin.conf \
+ -disablewallet \
+ -datadir=/data'
 ExecStop=/bin/sh -c 'docker stop -t 3 "$(docker ps -q --filter=name=%p_)"'
 
 [Install]
