--- a/bitcoin/Dockerfile
+++ b/bitcoin/Dockerfile
@@ -1,34 +1,31 @@
-FROM alpine:3.7
+FROM gcr.io/google-containers/debian-base-amd64:0.3
 
-# Expose mainnet ports (server, rpc)
-EXPOSE 8333 8334
+ARG VER
+ENV HOME /bitcoin
+EXPOSE 8332 8333
+VOLUME /bitcoin/data
+COPY entrypoint.sh /
 
-# Expose testnet ports (server, rpc)
-EXPOSE 18333 18334
+RUN \
+ echo "deb http://ftp.us.debian.org/debian unstable main" >> /etc/apt/sources.list && \
+ echo "Package: *\nPin: release a=unstable\nPin-Priority: 800" >> /etc/apt/preferences && \
+ apt-get update && apt-get install -y --no-install-recommends bash gnupg dirmngr ca-certificates wget bitcoind && \
+ # gosu
+ gpg --keyserver ha.pool.sks-keyservers.net --recv-keys B42F6819007F00F88E364FD4036A9C25BF357DD4 && \
+ wget -O /usr/local/bin/gosu "https://github.com/tianon/gosu/releases/download/1.10/gosu-$(dpkg --print-architecture)" && \
+ wget -O /usr/local/bin/gosu.asc "https://github.com/tianon/gosu/releases/download/1.10/gosu-$(dpkg --print-architecture).asc" && \
+ gpg --verify /usr/local/bin/gosu.asc && \
+ rm /usr/local/bin/gosu.asc && \
+ chmod +x /usr/local/bin/gosu && \
+ # files
+ chmod 0755 /entrypoint.sh && \
+ useradd -U -M -s /usr/sbin/nologin -d /bitcoin bitcoin && \
+ mkdir -p /bitcoin/data && \
+ mkdir -p /bitcoin/.bitcoin && \
+ ln -s /etc/bitcoin.conf /bitcoin/.bitcoin/bitcoin.conf && \
+ chown -R bitcoin: /bitcoin && \
+ # clean
+ apt-get purge -y --auto-remove ca-certificates wget gnupg dirmngr && \
+ apt-get clean && rm -rf /var/lib/apt/lists/*
 
-# Expose simnet ports (server, rpc)
-EXPOSE 18555 18556
-
-# Expose segnet ports (server, rpc)
-EXPOSE 28901 28902
-
-COPY "btcctl.sh" .
-COPY "btcd.sh" .
-
-ENV GOPATH=/go
-
-RUN mkdir /root/.btcd && \
- mkdir /root/.btcctl && \
- chmod +x btcctl.sh && \
- chmod +x btcd.sh && \
- mkdir /go && \
- export PATH=$PATH:$GOPATH/bin && \
- apk --no-cache add go git musl-dev bash && \
- go get -u github.com/Masterminds/glide && \
- git clone https://github.com/btcsuite/btcd $GOPATH/src/github.com/btcsuite/btcd && \
- cd $GOPATH/src/github.com/btcsuite/btcd && \
- glide install && \
- go install . ./cmd/... && \
- apk del go git musl-dev
-
-ENTRYPOINT ["/btcd.sh"]
+ENTRYPOINT ["/entrypoint.sh"]
