shorter ids for containers

--- a/tor/tor.service.template
+++ b/tor/tor.service.template
@@ -8,7 +8,7 @@ Requires=docker.service
 PermissionsStartOnly=true
 Restart=on-failure
 ExecStart=/bin/sh -c ' \
- docker run --name=%p_$(uuidgen) --rm \
+ docker run --name=%p_$(uuidgen | cut -d- -f1) --rm \
  -e NAME="${NAME}" \
  -e CONTACT="${CONTACT}" \
  -e TOR_CONFIG_TEMPLATE="${ROLE}" \
