--- a/bitcoin/bitcoin.service.template
+++ b/bitcoin/bitcoin.service.template
@@ -8,7 +8,7 @@ Requires=docker.service
 PermissionsStartOnly=true
 Restart=on-failure
 ExecStart=/bin/sh -c '\
- docker run --name=%p_$(uuidgen) --rm \
+ docker run --name=%p_$(uuidgen | cut -d- -f1) --rm \
  --net=host \
  -v /root/btcdata:/bitcoin/data:rw \
  ${IMG}'
