new bitcoin images

--- a/bitcoin/Dockerfile
+++ b/bitcoin/Dockerfile
@@ -1,33 +1,41 @@
-FROM launcher.gcr.io/google/debian9:latest
+FROM gcr.io/google-containers/debian-base-amd64:0.3
 
-ENV HOME /bitcoin
 EXPOSE 8332 8333
+
+ARG BITCOIN_VERSION
+
+ENV BITCOIN_URL https://bitcoin.org/bin/bitcoin-core-${BITCOIN_VERSION}/bitcoin-${BITCOIN_VERSION}-arm-linux-gnueabihf.tar.gz
+ENV BITCOIN_SHA256 ceba092c9a390082ff184c8d82a24bc34d7f9b421dc5c1e6847fcf769541f305
+ENV BITCOIN_ASC_URL https://bitcoin.org/bin/bitcoin-core-${BITCOIN_VERSION}/SHA256SUMS.asc
+ENV BITCOIN_PGP_KEY 01EA5486DE18A882D4C2684590C8019E36C2E964
+ENV BITCOIN_DATA /bitcoin/data
+ENV HOME /bitcoin
+
 VOLUME /bitcoin/data
-COPY entrypoint.sh /
+
+COPY bitcoin.conf /etc/
+COPY entrypoint /
 
 RUN \
- echo "deb http://ftp.us.debian.org/debian unstable main" >> /etc/apt/sources.list && \
- echo "Package: *\nPin: release a=unstable\nPin-Priority: 800" >> /etc/apt/preferences && \
- apt-get update && apt-get install -y --no-install-recommends bash gnupg dirmngr ca-certificates wget bitcoind=${VER}* && \
- # gosu
- key=B42F6819007F00F88E364FD4036A9C25BF357DD4 && \
- gpg --keyserver ha.pool.sks-keyservers.net --recv-keys ${key} || \
- gpg --keyserver pgp.mit.edu --recv-keys ${key} || \
- gpg --keyserver keyserver.pgp.com  --recv-keys ${key} && \
- wget -O /usr/local/bin/gosu "https://github.com/tianon/gosu/releases/download/1.10/gosu-$(dpkg --print-architecture)" && \
- wget -O /usr/local/bin/gosu.asc "https://github.com/tianon/gosu/releases/download/1.10/gosu-$(dpkg --print-architecture).asc" && \
- gpg --verify /usr/local/bin/gosu.asc && \
- rm /usr/local/bin/gosu.asc && \
- chmod +x /usr/local/bin/gosu && \
- # files
- chmod 0755 /entrypoint.sh && \
  useradd -U -M -s /usr/sbin/nologin -d /bitcoin bitcoin && \
- mkdir -p /bitcoin/data && \
+ apt-get update && \
+ apt-get upgrade -y && \
+ apt-get install -y --no-install-recommends gosu bash gnupg dirmngr ca-certificates wget && \
+ # bitcoind
+ cd /tmp && \
+ wget -qO bitcoin.tar.gz "$BITCOIN_URL" && \
+ echo "$BITCOIN_SHA256 bitcoin.tar.gz" | sha256sum -c - && \
+ gpg --keyserver keyserver.ubuntu.com --recv-keys "$BITCOIN_PGP_KEY" && \
+ wget -qO bitcoin.asc "$BITCOIN_ASC_URL" && \
+ gpg --verify bitcoin.asc && \
+ tar -xzvf bitcoin.tar.gz -C /usr/local --strip-components=1 --exclude=*-qt && \
+ cd / && \
+ # files
  mkdir -p /bitcoin/.bitcoin && \
  ln -s /etc/bitcoin.conf /bitcoin/.bitcoin/bitcoin.conf && \
  chown -R bitcoin: /bitcoin && \
  # clean
  apt-get purge -y --auto-remove ca-certificates wget gnupg dirmngr && \
- apt-get clean && rm -rf /var/lib/apt/lists/*
+ apt-get clean && rm -rf /var/lib/apt/lists/* && rm -rf /tmp/*
 
-ENTRYPOINT ["/entrypoint.sh"]
+ENTRYPOINT ["/entrypoint"]
