--- a/bitcoin/bitcoin.conf
+++ b/bitcoin/bitcoin.conf
@@ -1,22 +1,13 @@
-# /etc/bitcoin.conf
-# Bitcoin core client docker image config file
-#
-# No need to edit this file, you can pass config parameters as enviromnent
-# variables to the container in format:
-# CONF_<PARAMETER_NAME>=<value>
-# for example:
-# CONF_RPCPASSWORD=changeme would set rpcpassword=changeme
+# vim: set ft=conf
 
-# these two lines are for docker integration
 daemon=0
-txindex=1
 printtoconsole=1
 
 datadir=/bitcoin/data
 
 rpcallowip=::/0
-rpcuser=bitcoin
-rpcpassword=password
+rpcpassword=${BITCOIN_RPC_PASSWORD:-password}
+rpcuser=${BITCOIN_RPC_USER:-bitcoin}
 
 # Raspberry Pi optimizations
 dbcache=100
