more terraform files to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 .terraform
 .terraform_plugin_cache/
 saved-plan
-terraform.tfstate.backup
+terraform.tfstate.*
+.terraform.tfstate.*
 # other
 inventory/
