--- a/mail/Makefile
+++ b/mail/Makefile
@@ -1,2 +1,7 @@
-include ../_lib/bork/common.mk
 include ../_lib/tf/base.makefile
+
+aping:
+	ansible all -m ping -i hosts
+
+aplaybook:
+	ansible-playbook -i hosts -f 10 site.yaml
