common ansible targets
+ use tor to run ansible

--- a/mail/Makefile
+++ b/mail/Makefile
@@ -1,7 +1,2 @@
 include ../_lib/tf/base.makefile
-
-aping:
-	ansible all -m ping -i hosts
-
-aplaybook:
-	ansible-playbook -i hosts -f 10 site.yaml
+include ../_lib/ansible.makefile
