--- a/a-roles/mail/tasks/main.yaml
+++ b/a-roles/mail/tasks/main.yaml
@@ -1,3 +1,15 @@
+- name: Install mail packages
+  apt:
+    name: "{{ packages }}"
+  vars:
+    packages:
+    - certbot
+
+- name: install certbot
+  package:
+    name: certbot
+    state: present
+
 - name: certbot.service
   copy:
     src: files/certbot.service
