--- a/tor/site.yaml
+++ b/tor/site.yaml
@@ -8,7 +8,7 @@
           args:
             TOR_VER: "{{ tor_ver }}"
         name: quay.io/george_angel/tor
-        tag: "{{ tor_ver }}"
+        tag: "{{ tor_ver }}_{{ tor_rel }}"
         push: yes
         source: build
 
