--- a/a-roles/common/tasks/debian.yaml
+++ b/a-roles/common/tasks/debian.yaml
@@ -1,6 +1,6 @@
 - name: Update and upgrade apt packages
   apt:
-    upgrade: yes
+    upgrade: 'yes'
     update_cache: yes
     cache_valid_time: 86400 # One day
 
