--- a/a-roles/common/tasks/debian.yaml
+++ b/a-roles/common/tasks/debian.yaml
@@ -1,19 +1,31 @@
 - name: Update and upgrade apt packages
   apt:
-    upgrade: 'yes'
+    upgrade: "yes"
     update_cache: yes
     cache_valid_time: 86400 # One day
+  register: apt
+
+- debug: msg={{ apt.stdout.split('\n')[:-1] }}
 
 - name: Install a list of packages
   apt:
     name: "{{ packages }}"
   vars:
     packages:
-    - curl
-    - tmux
-    - mosh
-    - gnupg2
-    - ca-certificates
-    - apt-transport-https
-    - software-properties-common
-    - docker-ce
+      - curl
+      - tmux
+      - mosh
+      - gnupg2
+      - ca-certificates
+      - apt-transport-https
+      - software-properties-common
+      - docker-ce
+
+# https://docs.ansible.com/ansible/latest/collections/ansible/builtin/apt_module.html
+- name: Remove useless packages from the cache
+  apt:
+    autoclean: yes
+
+- name: Remove dependencies that are no longer required
+  apt:
+    autoremove: yes
