--- a/mail/vars/main.yaml
+++ b/mail/vars/main.yaml
@@ -2,4 +2,4 @@ hostname: mail.infosecproject.org
 domainname: infosecproject.org
 maildatavol: george_maildata
 mailstatevol: george_mailstate
-image: tvial/docker-mailserver:release-v7.2.0
+image: mailserver/docker-mailserver:9.1.0
