--- a/mail/ansible.cfg
+++ b/mail/ansible.cfg
@@ -1,6 +1,7 @@
 [defaults]
-roles_path = ../a-roles
 interpreter_python = auto
+roles_path = ../a-roles
+stdout_callback = yaml
 
 [ssh_connection]
 pipelining = "True"
