--- a/mail/vars/main.yaml
+++ b/mail/vars/main.yaml
@@ -2,4 +2,4 @@ hostname: mail.infosecproject.org
 domainname: infosecproject.org
 maildatavol: george_maildata
 mailstatevol: george_mailstate
-image: mailserver/docker-mailserver:12.0.0
+image: ghcr.io/docker-mailserver/docker-mailserver:12.1.0
