--- a/mail/ansible.cfg
+++ b/mail/ansible.cfg
@@ -1,7 +1,7 @@
 [defaults]
 interpreter_python = auto_silent
 roles_path = ../a-roles
-stdout_callback = yaml
+result_format=yaml
 
 [ssh_connection]
 pipelining = "True"
